# Linux_AI_Assistant

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  INSTALL.md  LICENSE  PLUGIN_DEVELOPMENT.md  README.md  USER_GUIDE.md  main.py  problems.md  pyproject.toml  requirements.txt
Prompts/: 00_MASTER_SPEC.md  01_PHASE_1_PROMPT.md  02_PHASE_2_PROMPT.md  03_PHASE_3_PROMPT.md  04_PHASE_4_PROMPT.md  05_PHASE_5_PROMPT.md  06_PHASE_6_PROMPT.md  07_PHASE_7_PROMPT.md  08_1_PHASE_8_PRODUCTION_FIXES.md  08_PHASE_8_PROMPT.md
assistant/: __init__.py
assistant/config/: __init__.py  config_loader.py  settings.example.yaml  settings.py  settings.yaml
assistant/core/: assistant_controller.py  base_tool.py  bootstrap.py  chat_session.py  constants.py  conversation_manager.py  exceptions.py  orchestrator.py  paths.py  production.py  tool_engine.py
assistant/diagnostics/: __init__.py  collectors.py  command.py  config.py  manager.py
assistant/filesystem/: __init__.py  cache.py  config.py  indexer.py  manager.py  metadata.py  reader.py  searcher.py  validators.py
assistant/memory/: __init__.py  sqlite_memory.py
assistant/models/: __init__.py  ollama_model.py
assistant/plugins/: __init__.py  example_plugin.py  plugin_manager.py
assistant/ui/: cli.py  (+1 more)
docs/: architecture.md
tests/: test_config_and_memory.py  test_controller.py  test_conversation.py  test_diagnostics.py  test_filesystem_engine.py  test_foundation.py  test_orchestrator.py  test_plugins.py  test_production.py  test_project_assistant.py  test_terminal_engine.py  test_tool_engine_and_filesystem.py
(+25 files in other folders)
