[project]
name = "linux-ai-assistant"
version = "1.0.0"
description = "A local production-ready Linux AI assistant"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.0.0",
  "PyYAML>=6.0.0",
  "rich>=13.0.0",
  "typer>=0.12.0",
  "PyMuPDF>=1.24.0",
  "python-docx>=1.1.0",
]

[project.scripts]
linux-ai-assistant = "assistant.ui.cli:run_cli"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
